deploy/kubernetes/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: directory-web
  namespace: directory-net
  labels:
    app.kubernetes.io/name: directory-net
    app.kubernetes.io/component: web
spec:
  type: LoadBalancer
  ports:
    - name: https
      port: 443
      targetPort: https
      protocol: TCP
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: directory-net
    app.kubernetes.io/component: web
